0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:


Loading of experimental 1D NMR data
===================================

In this example, we load a NMR dataset (in the Bruker format) and plot it.

.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: default

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-20

`datadir.path` contains the path to a default data directory.

.. GENERATED FROM PYTHON SOURCE LINES 20-25

.. code-block:: default


    datadir = scp.preferences.datadir

    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 26-27

load the data in a new dataset

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: default


    ndd = scp.read_topspin(path, expno=1, remove_digital_filter=True)








.. GENERATED FROM PYTHON SOURCE LINES 31-32

view it...

.. GENERATED FROM PYTHON SOURCE LINES 32-35

.. code-block:: default


    _ = scp.plot(ndd)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-37

Now load a 2D  dataset

.. GENERATED FROM PYTHON SOURCE LINES 37-42

.. code-block:: default


    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_2d"
    ndd = scp.read_topspin(path, expno=1, remove_digital_filter=True)
    _ = scp.plot(ndd)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/tempdirs/scp_deem6uhy/spectrochempy/extern/nmrglue.py:1840: UserWarning: (196608,)cannot be shaped into(147, 1024)
      warn(str(data.shape) + "cannot be shaped into" + str(shape))




.. GENERATED FROM PYTHON SOURCE LINES 43-45

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 45-47

.. code-block:: default


    # scp.show()








.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.646 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example




    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_nmr_from_bruker.py <plot_read_nmr_from_bruker.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_nmr_from_bruker.ipynb <plot_read_nmr_from_bruker.ipynb>`
