0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gettingstarted/examples/gallery/auto_examples_core/c_importer/plot_read_nmr_from_bruker.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:


Loading of experimental 1D NMR data
===================================

In this example, we load a NMR dataset (in the Bruker format) and plot it.

.. GENERATED FROM PYTHON SOURCE LINES 16-18

.. code-block:: Python

    import spectrochempy as scp








.. GENERATED FROM PYTHON SOURCE LINES 19-20

`datadir.path` contains the path to a default data directory.

.. GENERATED FROM PYTHON SOURCE LINES 20-25

.. code-block:: Python


    datadir = scp.preferences.datadir

    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_1d"








.. GENERATED FROM PYTHON SOURCE LINES 26-27

load the data in a new dataset

.. GENERATED FROM PYTHON SOURCE LINES 27-30

.. code-block:: Python


    ndd = scp.read_topspin(path, expno=1, remove_digital_filter=True)








.. GENERATED FROM PYTHON SOURCE LINES 31-32

view it...

.. GENERATED FROM PYTHON SOURCE LINES 32-34

.. code-block:: Python


    scp.plot(ndd)



.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_001.png
   :class: sphx-glr-single-img



.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 35-36

Now load a 2D  dataset

.. GENERATED FROM PYTHON SOURCE LINES 36-41

.. code-block:: Python


    path = datadir / "nmrdata" / "bruker" / "tests" / "nmr" / "topspin_2d"
    ndd = scp.read_topspin(path, expno=1, remove_digital_filter=True)
    scp.plot(ndd)




.. image-sg:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :alt: plot read nmr from bruker
   :srcset: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/sphx_glr_plot_read_nmr_from_bruker_002.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/spectrochempy/spectrochempy/src/spectrochempy/extern/nmrglue.py:1021: UserWarning: (196608,)cannot be shaped into(147, 1024)
      _, data = read_binary(f, shape=shape, cplex=cplex, big=big, isfloat=isfloat)


.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 42-44

This ends the example ! The following line can be uncommented if no plot shows when
running the .py script with python

.. GENERATED FROM PYTHON SOURCE LINES 44-47

.. code-block:: Python


    # scp.show()









.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.643 seconds)


.. _sphx_glr_download_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_read_nmr_from_bruker.ipynb <plot_read_nmr_from_bruker.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_read_nmr_from_bruker.py <plot_read_nmr_from_bruker.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_read_nmr_from_bruker.zip <plot_read_nmr_from_bruker.zip>`
